--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "git-test",
   "version": "1.0.0",
   "description": "\"\"\u001b[DTo learn git and node \"",
-  "main": "index.html",
+  "main": "main.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npm run lite",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lite":"lite-server"
   },
   "repository": {
+
     "type": "git",
     "url": "git+https://github.com/arrojuyogesh/git-examples.git"
   },
@@ -15,5 +18,8 @@
   "bugs": {
     "url": "https://github.com/arrojuyogesh/git-examples/issues"
   },
-  "homepage": "https://github.com/arrojuyogesh/git-examples#readme"
+  "homepage": "https://github.com/arrojuyogesh/git-examples#readme",
+  "devDependencies": {
+    "lite-server": "^2.4.0"
+  }
 }
